Fixed: disable animation on mobile.

--- a/less/engineer-apart.less
+++ b/less/engineer-apart.less
@@ -284,6 +284,10 @@ section.services {
       .logo, .logo-bg {
         display: none;
         position: absolute;
+
+        @media @screen-sm {
+          display: flex;
+        }
       }
     }
     h3 {
